rename postgresql -> postgres

--- a/charts/matrix-stack/ci/element-web-checkov-values.yaml
+++ b/charts/matrix-stack/ci/element-web-checkov-values.yaml
@@ -16,7 +16,7 @@ elementWeb:
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
 matrixAuthenticationService:
   enabled: false
-postgresql:
+postgres:
   enabled: false
 synapse:
   enabled: false
