--- a/charts/matrix-stack/ci/fragments/postgres-checkov.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-checkov.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-postgresql:
+postgres:
   enabled: true
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
