--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-externally-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgresql-secrets-in-helm.yaml
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgres-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -34,12 +34,14 @@ matrixAuthenticationService:
     ecdsaSecp384r1:
       secret: "{{ $.Release.Name }}-mas-external"
       secretKey: keysEcdsaSecp384r1
-postgresql:
+postgres:
   enabled: true
   adminPassword:
-    value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: adminPasswordShared
   essPassword:
-    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: essPasswordShared
 synapse:
   enabled: false
 wellKnownDelegation:
