--- a/charts/matrix-stack/ci/matrix-authentication-service-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-secrets-externally-values.yaml
@@ -41,7 +41,7 @@ matrixAuthenticationService:
     ecdsaSecp384r1:
       secret: "{{ $.Release.Name }}-mas-external"
       secretKey: keysEcdsaSecp384r1
-postgresql:
+postgres:
   enabled: false
 synapse:
   enabled: false
