--- a/charts/matrix-stack/ci/matrix-authentication-service-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-secrets-in-helm-values.yaml
@@ -47,7 +47,7 @@ matrixAuthenticationService:
         -----BEGIN EC PRIVATE KEY-----
          MHcCAQEEZFQZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49AwEHoUQDQgAE6521bYjZ789034nLz+oXJyVWqgUdDmRlKxvTfHsBhFtGpOaAoGCCqGSM49
          ------END EC PRIVATE KEY-----
-postgresql:
+postgres:
   enabled: false
 synapse:
   enabled: false
