--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -28,7 +28,7 @@ elementWeb:
       "feature_element_call_video_rooms": true
 matrixAuthenticationService:
   enabled: false
-postgresql:
+postgres:
   enabled: false
 synapse:
   enabled: false
