--- a/charts/matrix-stack/ci/fragments/postgres-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-secrets-in-helm.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-postgresql:
+postgres:
   enabled: true
 
   adminPassword:
