--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgresql-secrets-externally.yaml
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgres-secrets-in-helm.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -34,14 +34,12 @@ matrixAuthenticationService:
     ecdsaSecp384r1:
       secret: "{{ $.Release.Name }}-mas-external"
       secretKey: keysEcdsaSecp384r1
-postgresql:
+postgres:
   enabled: true
   adminPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: adminPasswordShared
+    value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
   essPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: essPasswordShared
+    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
 synapse:
   enabled: false
 wellKnownDelegation:
