--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgresql-minimal.yaml
+# source_fragments: synapse-minimal.yaml synapse-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -13,7 +13,7 @@ elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
-postgresql:
+postgres:
   enabled: true
 synapse:
   ingress:
