--- a/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-secrets-externally.yaml postgresql-secrets-externally.yaml
+# source_fragments: synapse-minimal.yaml synapse-secrets-externally.yaml postgres-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -11,7 +11,7 @@ elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
-postgresql:
+postgres:
   enabled: true
   adminPassword:
     secret: "{{ $.Release.Name }}-pg-external"
