--- a/charts/matrix-stack/ci/well-known-checkov-values.yaml
+++ b/charts/matrix-stack/ci/well-known-checkov-values.yaml
@@ -11,7 +11,7 @@ elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
-postgresql:
+postgres:
   enabled: false
 synapse:
   enabled: false
