--- a/charts/matrix-stack/templates/postgres/configmap.yaml
+++ b/charts/matrix-stack/templates/postgres/configmap.yaml
@@ -4,14 +4,14 @@ Copyright 2025 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with $.Values.postgresql }}
-{{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
+{{- with $.Values.postgres }}
+{{- if (include "element-io.postgres.enabled" (dict "root" $)) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.postgresql.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-postgresql
+    {{- include "element-io.postgres.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-postgres
   namespace: {{ $.Release.Namespace }}
 data:
   init-dbs.sh: |
@@ -21,7 +21,7 @@ data:
       dict "root" $ "context" (
         dict "secretProperty" .adminPassword
               "initSecretKey" "POSTGRESQL_ADMIN_PASSWORD"
-              "defaultSecretName" (printf "%s-postgresql" $.Release.Name)
+              "defaultSecretName" (printf "%s-postgres" $.Release.Name)
               "defaultSecretKey" "ADMIN_PASSWORD"
         )
     ) }}`;
@@ -30,7 +30,7 @@ data:
     dict "root" $ "context" (
       dict "secretProperty" .essPassword
             "initSecretKey" "POSTGRESQL_ESS_PASSWORD"
-            "defaultSecretName" (printf "%s-postgresql" $.Release.Name)
+            "defaultSecretName" (printf "%s-postgres" $.Release.Name)
             "defaultSecretKey" "ESS_PASSWORD"
       )
     ) }}`;
