--- a/charts/matrix-stack/templates/postgres/secret.yaml
+++ b/charts/matrix-stack/templates/postgres/secret.yaml
@@ -4,15 +4,15 @@ Copyright 2025 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with $.Values.postgresql -}}
-{{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
+{{- with $.Values.postgres -}}
+{{- if (include "element-io.postgres.enabled" (dict "root" $)) }}
 {{- if or .adminPassword.value  .essPassword.value }}
 apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    {{- include "element-io.postgresql.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-postgresql
+    {{- include "element-io.postgres.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-postgres
   namespace: {{ $.Release.Namespace }}
 data:
 {{- with .adminPassword.value }}
