--- a/charts/matrix-stack/templates/postgres/service_monitor.yaml
+++ b/charts/matrix-stack/templates/postgres/service_monitor.yaml
@@ -4,16 +4,16 @@ Copyright 2025 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with .Values.postgresql -}}
-{{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
+{{- with .Values.postgres -}}
+{{- if (include "element-io.postgres.enabled" (dict "root" $)) }}
 {{- if $.Capabilities.APIVersions.Has "monitoring.coreos.com/v1/ServiceMonitor" }}
 {{- if .serviceMonitors.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.postgresql.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-postgresql
+    {{- include "element-io.postgres.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-postgres
   namespace: {{ $.Release.Namespace }}
 spec:
   endpoints:
@@ -21,7 +21,7 @@ spec:
     port: metrics
   selector:
     matchLabels:
-      app.kubernetes.io/instance: {{ $.Release.Name }}-postgresql
+      app.kubernetes.io/instance: {{ $.Release.Name }}-postgres
 {{- end }}
 {{- end }}
 {{- end -}}
