--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -882,7 +882,7 @@ matrixAuthenticationService:
   ##   value: "bar"
   extraEnv: []
 
-postgresql:
+postgres:
   enabled: true
 
   postgresExporter:
