postgres: use a helper to determine host:port combo

--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -186,11 +186,7 @@ spec:
         - "/matrix-tools"
         - tcpwait
         - -address
-{{- if .postgres }}
-        - "{{ (tpl .postgres.host $) }}:{{ .postgres.port }}"
-{{- else }}
-        - "{{ $.Release.Name }}-postgres.{{ $.Release.Namespace }}.svc.cluster.local:5432"
-{{- end }}
+        - {{ include "element-io.ess-library.postgres-host-port" (dict "root" $ "context" .postgres)}}
 {{- with .resources }}
         resources:
           {{- toYaml . | nindent 10 }}
