--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -9,13 +9,8 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    {{ include "element-io.ess-library.postgres-annotation" (dict "root" $ "context" (dict
-                                                                "postgresProperty" .postgres
-                                                                "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
-                                                                )
-                                            ) -}}
 {{- with .annotations }}
+  annotations:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
@@ -37,13 +32,13 @@ spec:
       labels:
         {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/matrix-authentication-service/secret.yaml") $ | sha1sum }}"
-      annotations:
-        {{ include "element-io.ess-library.postgres-annotation" (dict "root" $ "context" (dict
+        {{ include "element-io.ess-library.postgres-label" (dict "root" $ "context" (dict
                                                                 "postgresProperty" .postgres
                                                                 "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
                                                                 )
                                             ) -}}
 {{- with .annotations }}
+      annotations:
         {{- toYaml . | nindent 8 }}
 {{- end }}
     spec:
