ci: fix example enabled missing postgres

--- a/charts/matrix-stack/ci/example-default-enabled-components-values.yaml
+++ b/charts/matrix-stack/ci/example-default-enabled-components-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: element-web-minimal.yaml synapse-minimal.yaml matrix-authentication-service-minimal.yaml init-secrets-minimal.yaml well-known-minimal.yaml
+# source_fragments: element-web-minimal.yaml synapse-minimal.yaml matrix-authentication-service-minimal.yaml init-secrets-minimal.yaml postgres-minimal.yaml well-known-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -14,7 +14,7 @@ matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
 postgres:
-  enabled: false
+  enabled: true
 synapse:
   ingress:
     host: synapse.ess.localhost
