postgres: use a distinct user/password for each component

--- a/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
@@ -16,9 +16,13 @@ postgres:
   adminPassword:
     secret: "{{ $.Release.Name }}-pg-external"
     secretKey: adminPasswordShared
-  essPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: essPasswordShared
+  essPasswords:
+    matrixAuthenticationService:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: masPasswordShared
+    synapse:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: synapsePasswordShared
 synapse:
   ingress:
     host: synapse.ess.localhost
