--- a/charts/matrix-stack/ci/synapse-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-in-helm-values.yaml
@@ -15,8 +15,11 @@ postgres:
   enabled: true
   adminPassword:
     value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
-  essPassword:
-    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+  essPasswords:
+    matrixAuthenticationService:
+      value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+    synapse:
+      value: CHANGEME-PahpeeMeesha5aileGhaebaiceabeime
 synapse:
   ingress:
     host: synapse.ess.localhost
