--- a/charts/matrix-stack/templates/postgres/secret.yaml
+++ b/charts/matrix-stack/templates/postgres/secret.yaml
@@ -6,7 +6,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with $.Values.postgres -}}
 {{- if (include "element-io.postgres.enabled" (dict "root" $)) }}
-{{- if or .adminPassword.value  .essPassword.value }}
+{{- if or .adminPassword.value (include "element-io.postgres.anyEssPasswordHasValue" (dict "root" $ "context" .)) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -18,8 +18,11 @@ data:
 {{- with .adminPassword.value }}
   ADMIN_PASSWORD: {{ . | b64enc }}
 {{- end }}
-{{- with .essPassword.value }}
-  ESS_PASSWORD: {{ .| b64enc }}
+{{- range $key := (.essPasswords | keys | uniq | sortAlpha) }}
+{{- $prop := index $.Values.postgres.essPasswords $key }}
+{{- with $prop.value }}
+  ESS_PASSWORD_{{ $key | upper }}: {{ .| b64enc }}
+{{- end }}
 {{- end }}
 {{- end -}}
 {{- end -}}
