--- a/charts/matrix-stack/ci/fragments/postgres-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-secrets-externally.yaml
@@ -9,6 +9,11 @@ postgres:
     secret: "{{ $.Release.Name }}-pg-external"
     secretKey: adminPasswordShared
 
-  essPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: essPasswordShared
+  essPasswords:
+    matrixAuthenticationService:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: masPasswordShared
+    synapse:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: synapsePasswordShared
+
