--- a/charts/matrix-stack/ci/fragments/postgres-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-secrets-in-helm.yaml
@@ -8,5 +8,9 @@ postgres:
   adminPassword:
     value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
 
-  essPassword:
-    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+  essPasswords:
+    matrixAuthenticationService:
+      value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+    synapse:
+      value: CHANGEME-PahpeeMeesha5aileGhaebaiceabeime
+
