--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-externally-values.yaml
@@ -39,9 +39,13 @@ postgres:
   adminPassword:
     secret: "{{ $.Release.Name }}-pg-external"
     secretKey: adminPasswordShared
-  essPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: essPasswordShared
+  essPasswords:
+    matrixAuthenticationService:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: masPasswordShared
+    synapse:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: synapsePasswordShared
 synapse:
   enabled: false
 wellKnownDelegation:
