--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
@@ -38,8 +38,11 @@ postgres:
   enabled: true
   adminPassword:
     value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
-  essPassword:
-    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+  essPasswords:
+    matrixAuthenticationService:
+      value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
+    synapse:
+      value: CHANGEME-PahpeeMeesha5aileGhaebaiceabeime
 synapse:
   enabled: false
 wellKnownDelegation:
