--- a/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/deployment.yaml
@@ -33,6 +33,7 @@ spec:
         {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/matrix-authentication-service/secret.yaml") $ | sha1sum }}"
         {{ include "element-io.ess-library.postgres-label" (dict "root" $ "context" (dict
+                                                                "essPassword" "synapse"
                                                                 "postgresProperty" .postgres
                                                                 "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
                                                                 )
@@ -93,6 +94,8 @@ spec:
                  include "element-io.ess-library.postgres-secret-path" (
                      dict "root" $
                      "context" (dict
+                       "essPassword" "matrixAuthenticationService"
+                       "initSecretKey" "POSTGRES_MATRIXAUTHENTICATIONSERVICE_PASSWORD"
                        "secretProperty" .postgres.password
                        "defaultSecretName" (printf "%s-matrix-authentication-service" $.Release.Name)
                        "defaultSecretKey" "POSTGRES_PASSWORD"
@@ -181,7 +184,7 @@ spec:
         - "/matrix-tools"
         - tcpwait
         - -address
-        - {{ include "element-io.ess-library.postgres-host-port" (dict "root" $ "context" .postgres)}}
+        - {{ include "element-io.ess-library.postgres-host-port" (dict "root" $ "context" (dict "postgres" .postgres)) | quote }}
 {{- with .resources }}
         resources:
           {{- toYaml . | nindent 10 }}
