--- a/charts/matrix-stack/templates/postgres/configmap.yaml
+++ b/charts/matrix-stack/templates/postgres/configmap.yaml
@@ -16,32 +16,36 @@ metadata:
 data:
   configure-dbs.sh: |
     #!/bin/sh
+    set -e;
     export POSTGRES_PASSWORD=`cat /secrets/{{
         include "element-io.ess-library.init-secret-path" (
       dict "root" $ "context" (
         dict "secretProperty" .adminPassword
-              "initSecretKey" "POSTGRESQL_ADMIN_PASSWORD"
+              "initSecretKey" "POSTGRES_ADMIN_PASSWORD"
               "defaultSecretName" (printf "%s-postgres" $.Release.Name)
               "defaultSecretKey" "ADMIN_PASSWORD"
         )
     ) }}`;
+{{- range $key := (.essPasswords | keys | uniq | sortAlpha) -}}
+{{- if (index $.Values $key).enabled -}}
+{{- $prop := index $.Values.postgres.essPasswords $key }}
     export ESS_PASSWORD=`cat /secrets/{{
   include "element-io.ess-library.init-secret-path" (
     dict "root" $ "context" (
-      dict "secretProperty" .essPassword
-            "initSecretKey" "POSTGRESQL_ESS_PASSWORD"
+      dict "secretProperty" $prop
+            "initSecretKey" (printf "POSTGRES_%s_PASSWORD" ($key | upper))
             "defaultSecretName" (printf "%s-postgres" $.Release.Name)
-            "defaultSecretKey" "ESS_PASSWORD"
+            "defaultSecretKey" (printf "ESS_PASSWORD_%s" ($key | upper))
       )
     ) }}`;
     (
-      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_catalog.pg_roles WHERE rolname = 'ess_user'" | grep -q 1) && \
-      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "ALTER USER ess_user PASSWORD '"$ESS_PASSWORD"'")
+      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_catalog.pg_roles WHERE rolname = '{{ $key | lower }}_user'" | grep -q 1) && \
+      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "ALTER USER {{ $key | lower }}_user PASSWORD '"$ESS_PASSWORD"'")
     ) || \
-    (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "CREATE ROLE ess_user LOGIN PASSWORD '"$ESS_PASSWORD"'");
-{{- range $dbname := list "synapse" "mas" }}
-    (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = '{{ $dbname }}'" | grep -q 1) || \
-    (echo -n $POSTGRES_PASSWORD | createdb --encoding=UTF8 --locale=C --template=template0 --owner=ess_user {{ $dbname }} -U postgres)
-{{- end -}}
+      (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -c "CREATE ROLE {{ $key | lower }}_user LOGIN PASSWORD '"$ESS_PASSWORD"'");
+    (echo -n $POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = '{{ $key | lower }}'" | grep -q 1) || \
+    (echo -n $POSTGRES_PASSWORD | createdb --encoding=UTF8 --locale=C --template=template0 --owner={{ $key | lower }}_user {{ $key | lower }} -U postgres)
+{{- end }}
+{{- end }}
 {{- end -}}
 {{- end -}}
