Sort the keys in the CI values files assembly

--- a/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
+++ b/charts/matrix-stack/ci/synapse-ingress-additional-paths-values.yaml
@@ -5,32 +5,32 @@
 # source_fragments: synapse-minimal.yaml synapse-ingress-additional-paths.yaml init-secrets-minimal.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-initSecrets:
-  enabled: true
 elementWeb:
   enabled: false
+initSecrets:
+  enabled: true
 matrixAuthenticationService:
   enabled: false
 postgres:
   enabled: true
+serverName: ess.localhost
 synapse:
   ingress:
-    host: synapse.ess.localhost
     additionalPaths:
-      - path: /_matrix/identity
-        availability: only_externally
+      - availability: only_externally
+        path: /_matrix/identity
         service:
           name: sydent
           port:
             number: 8080
-      - path: /_synapse
-        availability: blocked
-      - path: /other
-        availability: internally_and_externally
+      - availability: blocked
+        path: /_synapse
+      - availability: internally_and_externally
+        path: /other
         service:
           name: something
           port:
             name: http
+    host: synapse.ess.localhost
 wellKnownDelegation:
   enabled: false
-serverName: ess.localhost
