values files: use distinct postgresql values for synapse & mas

--- a/charts/matrix-stack/ci/fragments/postgres-matrix-authentication-service-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-matrix-authentication-service-secrets-in-helm.yaml
@@ -3,8 +3,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 postgres:
-  enabled: true
+  essPasswords:
+    matrixAuthenticationService:
+      value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
 
-  adminPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: adminPasswordShared
