--- a/charts/matrix-stack/ci/fragments/postgres-synapse-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-synapse-secrets-externally.yaml
@@ -3,8 +3,8 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 postgres:
-  enabled: true
+  essPasswords:
+    synapse:
+      secret: "{{ $.Release.Name }}-pg-external"
+      secretKey: synapsePasswordShared
 
-  adminPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: adminPasswordShared
