--- a/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-secrets-externally.yaml postgres-secrets-externally.yaml
+# source_fragments: synapse-minimal.yaml synapse-secrets-externally.yaml postgres-secrets-externally.yaml postgres-synapse-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -17,9 +17,6 @@ postgres:
     secret: "{{ $.Release.Name }}-pg-external"
     secretKey: adminPasswordShared
   essPasswords:
-    matrixAuthenticationService:
-      secret: "{{ $.Release.Name }}-pg-external"
-      secretKey: masPasswordShared
     synapse:
       secret: "{{ $.Release.Name }}-pg-external"
       secretKey: synapsePasswordShared
