--- a/charts/matrix-stack/ci/synapse-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-in-helm-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-secrets-in-helm.yaml postgres-secrets-in-helm.yaml
+# source_fragments: synapse-minimal.yaml synapse-secrets-in-helm.yaml postgres-secrets-in-helm.yaml postgres-synapse-secrets-in-helm.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -16,10 +16,8 @@ postgres:
   adminPassword:
     value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
   essPasswords:
-    matrixAuthenticationService:
-      value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
     synapse:
-      value: CHANGEME-PahpeeMeesha5aileGhaebaiceabeime
+      value: CHANGEME-yuhaoshiupahmaGheiheiloJuone3aim
 synapse:
   ingress:
     host: synapse.ess.localhost
