--- a/charts/matrix-stack/ci/fragments/postgres-synapse-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/postgres-synapse-secrets-in-helm.yaml
@@ -3,8 +3,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 postgres:
-  enabled: true
+  essPasswords:
+    synapse:
+      value: CHANGEME-yuhaoshiupahmaGheiheiloJuone3aim
 
-  adminPassword:
-    secret: "{{ $.Release.Name }}-pg-external"
-    secretKey: adminPasswordShared
